--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Podcast Generator"
+name: "Podcast Generator (xzl896)"
 author: "Teddy Solomon"
 description: "Generates a feed for a podcast from a YAML file"
 runs:
